--- a/src/assets/scss/common/_page.scss
+++ b/src/assets/scss/common/_page.scss
@@ -1,7 +1,7 @@
 .main-page{
-    background: $color-primary;
     position: relative;
     height: 100vh;
+    padding: 200px 0;
     .main-logo{
       width: 400px;
       margin: auto;
