--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,8 +4,11 @@
 
 .footerPage {
     background: lighten($grey-6A, 30%);
-    position: relative;
-    z-index: 2;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
     display: flex;
     align-items: center;
     justify-content: center;
